enemy work has started

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<img id="img_player" src="player.png" hidden="true">
 		<img id="img_btn_unpressed" src="btn_unpressed.png" hidden="true">
 		<img id="img_btn_pressed" src="btn_pressed.png" hidden="true">
+		<img id="img_enemy_16" src="enemy_16.png" hidden="true">
 		
 		<center>
 			<h1>Lodom Darley</h1>
