--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 		</style>
 	</head>
 	<body>
-		<img id="img_background" src="background.png" hidden="true">
+		<img id="img_wall" src="wall.png" hidden="true">
+		<img id="img_floor" src="floor.png" hidden="true">
 		<img id="img_player" src="player.png" hidden="true">
 		<img id="img_btn_unpressed" src="btn_unpressed.png" hidden="true">
 		<img id="img_btn_pressed" src="btn_pressed.png" hidden="true">
