--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 			<canvas id="canvas"></canvas>
 		</center>
 		
+		<script src="map.js"></script>
 		<script src="util.js"></script>
 		<script src="random.js"></script>
 		<script src="input.js"></script>
