--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,25 @@
 	<head>
 		<title>Lodom Darley</title>
 		<style>
+			* {
+				padding: 0px;
+				margin: 0px;
+			}
+
 			h1 {
 				font-family: "Comic Sans MS";
 			}
 		</style>
 	</head>
 	<body>
-		<img id="img_wall" src="wall.png" hidden="true">
-		<img id="img_floor" src="floor.png" hidden="true">
-		<img id="img_player" src="player.png" hidden="true">
-		<img id="img_btn_unpressed" src="btn_unpressed.png" hidden="true">
-		<img id="img_btn_pressed" src="btn_pressed.png" hidden="true">
-		<img id="img_enemy_16" src="enemy_16.png" hidden="true">
+		<img id="img_background" src="background.png" hidden="true">
+		<img id="img_player" src="player.gif">
 		
 		<center>
 			<h1>Lodom Darley</h1>
 			<canvas id="canvas"></canvas>
 		</center>
 		
-		<script src="map.js"></script>
-		<script src="util.js"></script>
 		<script src="random.js"></script>
 		<script src="input.js"></script>
 		<script src="graphics.js"></script>
