that's it for day 1

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 		<title>Lodom Darley</title>
 		<style>
 			* {
-				padding: 0px;
-				margin: 0px;
+				padding: 5px;
+				margin: 5px;
 			}
 
 			h1 {
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<img id="img_background" src="background.png" hidden="true">
-		<img id="img_player" src="player.gif">
+		<img id="img_player" src="player.gif" hidden="true">
 		
 		<center>
 			<h1>Lodom Darley</h1>
