yay, an endless runner!

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<body>
 		<img id="img_background" src="background.png" hidden="true">
 		<img id="img_player" src="player.gif" hidden="true">
+		<img id="img_block" src="block.png" hidden="true">
 		
 		<center>
 			<h1>Lodom Darley</h1>
