--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,6 @@
 	<head>
 		<title>Lodom Darley</title>
 		<style>
-			* {
-				padding: 5px;
-				margin: 5px;
-			}
-
 			h1 {
 				font-family: "Comic Sans MS";
 			}
@@ -16,7 +11,8 @@
 	<body>
 		<img id="img_background" src="background.png" hidden="true">
 		<img id="img_player" src="player.gif" hidden="true">
-		<img id="img_block" src="block.png" hidden="true">
+		<img id="img_enemy1" src="sky.png" hidden="true">
+		<img id="img_enemy2" src="land.png" hidden="true">
 		
 		<center>
 			<h1>Lodom Darley</h1>
